--- a/style.css
+++ b/style.css
@@ -334,6 +334,13 @@
 }
 
 @media(max-width:650px){
+    .sectction-1-ras{
+        height: 300px;
+        width: 100%;
+        background-image: url(https://www.sjcpl.in/wp-content/uploads/2016/09/office-pic.jpg);
+        background-size: 100% 100%;
+        background-attachment: fixed;
+    }
     .csr-button1{
         height: 150px;
         width: 350px;
