--- a/style.css
+++ b/style.css
@@ -335,14 +335,16 @@
 
 @media(max-width:650px){
     .sectction-1-ras{
-        height: 200px;
+        height: 250px;
     }
     .sectction-1-ras h4{
-        padding-top: 50px;
+        padding-top: 110px;
         font-size:16px;
+        font-weight:bold;
     }
     .sectction-1-ras h5{
         font-size:16px;
+        font-weight:bold;
     }
     .csr-button1{
         height: 150px;
