--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- .main_menu{
+.main_menu{
     height: auto;
     width: 100%;
     float: left;
@@ -132,14 +132,15 @@
     }
 }
 .section-a-2{
-    padding: 20px;
+    padding-left: 220px;
     float: left;
+    text-align: center;
 }
 .section-a-3{
     font-size: 19px;
     color: white;
     font-weight: lighter;
-    margin-top: 80px;
+    margin-top: 60px;
     height: 200px;
     width: 100%;
     text-align: justify;
@@ -151,12 +152,12 @@
         display: none;
     }
     .section-a-2{
-        padding:0px;
-        float: left;
+        padding-left:0px;
+        text-align: center;
     }
     .section-a-2 h1{
-        margin-top: -20px;
-        padding-left: 100px;
+        margin-top: -45px;
+        padding-left: 80px;
         text-align: center;
     }
     .section-a-3{
@@ -251,7 +252,7 @@
     margin-left: 1px;
     padding: 0px;
     border-radius: 20px;
-    height: 200px;
+    height: 150px;
     width: 100%;
     float: left;
     color: white;
